objects/Package_Plans__c.object
<CustomObject>
    <fields>
        <fullName>Package_Plan_Id__c</fullName>
        <externalId>true</externalId>
        <label>Package Plan Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Package Plans</relationshipLabel>
        <relationshipName>Package_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Package Plans</relationshipLabel>
        <relationshipName>Package_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Package Plan</label>
    <nameField>
        <label>Package Plans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>